change to fix card

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,12 +5,12 @@ import IconPreview from "../components/IconPreview.astro"
 
 <article content-to-copy class="relative min-h-72 w-full overflow-hidden shadow-xl rounded-md">
     <slot />
-    <footer class="flex justify-end gap-1">
-        <button button-preview class="rounded-md hover:cursor-pointer p-1 backdrop-brightness-50">
+    <footer class="absolute bottom-0 right-0 gap-1 z-10">
+        <button button-preview class="hover:cursor-pointer p-1 backdrop-brightness-50">
             <IconPreview  class="text-slate-200"/>
         </button>
         <button button-copy class="hover:cursor-pointer p-1 backdrop-brightness-50">
-            <IconCopy  class="text-slate-200  "/>
+            <IconCopy  class="text-slate-200"/>
         </button>
     </footer>
 </article>
