--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,3 +1,3 @@
-<h1 class="bg-gradient-to-r from-violet-600 via-blue-500 to-purple-400 inline-block text-transparent bg-clip-text text-balance text-9xl p-3">
+<h1 class="bg-gradient-to-r from-violet-600 via-blue-500 to-purple-400 inline-block text-transparent bg-clip-text text-balance text-8xl p-3 font-semibold">
     <slot/>
 </h1>
