--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -2,8 +2,62 @@
 import Card from "./Card.astro";
 ---
 
-<section class="grid gap-4 grid-cols-[repeat(auto-fill,_minmax(15rem,_1fr))]">
+<section class="grid gap-4 mb-9 grid-cols-[repeat(auto-fill,_minmax(15rem,_1fr))]">
     <Card>
+        <div
+            class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+        >
+        </div>
+    </Card>
+    <Card>
+        <div
+            class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950"
+            style="background-image:linear-gradient(38.73deg, rgba(204, 0, 187, 0.25) 0%, rgba(201, 32, 184, 0) 50%), linear-gradient(141.27deg, rgba(0, 70, 209, 0) 50%, rgba(0, 70, 209, 0.25) 100%)"
+        >
+        </div>
+    </Card>
+    <Card>
+        <div
+            class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]"
+        >
+        </div>
+    </Card>
+    <Card>
+        <div class="relative h-full w-full bg-slate-950">
+            <div
+                class="absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_70%,transparent_100%)]"
+            >
+            </div>
+        </div>
+    </Card>
+    <Card>
+        <div
+            class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+        >
+        </div>
+    </Card>
+    <Card>
+        <div
+            class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950"
+            style="background-image:linear-gradient(38.73deg, rgba(204, 0, 187, 0.25) 0%, rgba(201, 32, 184, 0) 50%), linear-gradient(141.27deg, rgba(0, 70, 209, 0) 50%, rgba(0, 70, 209, 0.25) 100%)"
+        >
+        </div>
+    </Card>
+    <Card>
+        <div
+            class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]"
+        >
+        </div>
+    </Card>
+    <Card>
+        <div class="relative h-full w-full bg-slate-950">
+            <div
+                class="absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_70%,transparent_100%)]"
+            >
+            </div>
+        </div>
+    </Card>
+        <Card>
         <div
             class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
         >
