--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Title from '../components/Title.astro'
 
 <Layout title="Backgrounds using tailwind only copy to use">
     <main class="max-w-screen-lg mx-auto">
-        <header class="flex justify-center min-h-64 items-center">
+        <header class="flex justify-center min-h-36 sm:min-h-64 items-center">
             <Title>Backgy</Title>
         </header>
         <Cards/>
