--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,47 +1,59 @@
 ---
-import IconCopy from "../components/IconCopy.astro"
-import IconPreview from "../components/IconPreview.astro"
+import IconCopy from "../components/IconCopy.astro";
+import IconPreview from "../components/IconPreview.astro";
+
+const { backgroundTW, backgroundCSS } = Astro.props;
 ---
 
-<article content-to-copy class="relative min-h-72 w-full overflow-hidden shadow-xl rounded-md">
-    <slot />
-    <footer class="absolute bottom-0 right-0 gap-1 z-10">
-        <button button-preview class="shadow-xl rounded-md hover:cursor-pointer p-1 backdrop-brightness-50">
-            <IconPreview  class="text-slate-200"/>
-        </button>
-        <button button-copy class="shadow-xl rounded-md mr-1 hover:cursor-pointer p-1 backdrop-brightness-50">
-            <IconCopy  class="text-slate-200"/>
-        </button>
-    </footer>
+<article class="relative min-h-72 w-full overflow-hidden rounded-md">
+  <Fragment set:html={backgroundTW} />
+  <footer class="absolute right-0 flex gap-1 z-10 mr-1 mt-1">
+    <button
+      button-preview
+      class="rounded-md hover:cursor-pointer hover:scale-110 p-2 backdrop-brightness-50"
+      value={backgroundTW}
+    >
+      <IconPreview class="text-slate-200" />
+    </button>
+    <button
+      button-copy-to-css
+      value={backgroundCSS}
+      class="rounded-md hover:cursor-pointer hover:scale-110 p-2 backdrop-brightness-50"
+    >
+      <IconCopy class="text-slate-200" />
+      <p class="text-yellow-300 font-semibold absolute right-0 top-0">CSS</p>
+    </button>
+    <button
+      button-copy-to-tailwind
+      value={backgroundTW}
+      class="rounded-md hover:cursor-pointer hover:scale-110 p-2 backdrop-brightness-50"
+    >
+      <IconCopy class="text-slate-200" />
+      <p class="text-blue-300 font-semibold absolute right-0 top-0">TW</p>
+    </button>
+  </footer>
 </article>
 <script>
-  const preview = document.querySelectorAll('[button-preview]');
+  const preview = document.querySelectorAll("[button-preview]");
 
-  const copy = document.querySelectorAll('[button-copy]');
-  
-  const replace = document.querySelectorAll('[div-replace]');
-  preview.forEach((button) => {
-      button.addEventListener('click', () => {
-        const contentToCopy = document.querySelectorAll('[content-to-copy]');
-        console.log("hello")
-        console.log(replace[0])
-        console.log(contentToCopy[0], "acaaa!!!")
-        replace[0].innerHTML = `<div class="absolute top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"></div>`
-        console.log(replace[0])
+  const copyCSS = document.querySelectorAll("[button-copy-to-css]");
 
+  const copyTW = document.querySelectorAll("[button-copy-to-tailwind]");
+
+  const replace = document.querySelector("[background-to-replace]");
+
+  preview.forEach((button: any) => {
+    button.addEventListener("click", () => {
+      if (replace) {
+        replace.innerHTML = button.value;
+      }
     });
   });
-
-copy.forEach((button) => {
-  button.addEventListener('click', () => {
-      console.log("hello")
-  });
-});
-
-replace.forEach((button) => {
-  button.addEventListener('click', () => {
-      console.log("hello")
-  });
-});
-
+  function copyToClipboard(element: any) {
+    element.addEventListener("click", () => {
+      navigator.clipboard.writeText(element.value);
+    });
+  }
+  copyCSS.forEach(copyToClipboard);
+  copyTW.forEach(copyToClipboard);
 </script>
