change ver to preview

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,7 +14,7 @@ const { backgroundTW, backgroundCSS } = Astro.props;
       value={backgroundTW}
     >
       <IconPreview class="text-violet-300" />
-      <p class="text-violet-300 text-xs font-semibold absolute right-1 top-0">VER</p>
+      <p class="text-violet-300 text-xs font-semibold absolute right-1 top-0">PW</p>
       
     </button>
     <button
