--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -10,6 +10,18 @@ import {backgrounds} from "./backgrounds"
             backgroundCSS={e.background_css}
             />))
     }
+        {
+            backgrounds.map((e)=>(
+                <Card backgroundTW={e.background_tailwind}
+                backgroundCSS={e.background_css}
+                />))
+        }
+            {
+                backgrounds.map((e)=>(
+                    <Card backgroundTW={e.background_tailwind}
+                    backgroundCSS={e.background_css}
+                    />))
+            }
 </section>
 
 
