backgy finish meta

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,19 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<meta name="title" content="Backgy - Backgrounds made for your website using Tailwind and CSS just copy and paste ready to use" />
+<meta name="description" content="Gradients, colors, styles all in one place, you just have to choose the one you like the most, copy and paste it. Enjoy many backgrounds for your projects, pages, and anything you want all in Backgy." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://backgy.com/" />
+<meta property="og:title" content="Backgy - Backgrounds made for your website using Tailwind and CSS just copy and paste ready to use" />
+<meta property="og:description" content="Gradients, colors, styles all in one place, you just have to choose the one you like the most, copy and paste it. Enjoy many backgrounds for your projects, pages, and anything you want all in Backgy." />
+<meta property="og:image" content="https://res.cloudinary.com/dnf60zbjm/image/upload/backgy_og_image.jpg" />
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://backgy.com/" />
+<meta property="twitter:title" content="Backgy - Backgrounds made for your website using Tailwind and CSS just copy and paste ready to use" />
+<meta property="twitter:description" content="Gradients, colors, styles all in one place, you just have to choose the one you like the most, copy and paste it. Enjoy many backgrounds for your projects, pages, and anything you want all in Backgy." />
+<meta property="twitter:image" content="https://res.cloudinary.com/dnf60zbjm/image/upload/backgy_og_image.jpg" />
+
 		<title>{title}</title>
 	</head>
 	<body>
