--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import Title from '../components/Title.astro'
 ---
 
-<Layout title="Backgrounds using tailwind only copy to use">
+<Layout title="Backgy - Backgrounds made for your website using Tailwind and CSS just copy and paste ready to use">
     <main class="max-w-screen-lg mx-auto">
         <header class="flex justify-center min-h-36 sm:min-h-64 items-center">
             <Title>Backgy</Title>
