--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,32 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<div background-to-replace>
-			<div class="fixed left-0 top-0 -z-10 h-full w-full"><div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950" style="background-image:linear-gradient(38.73deg, rgba(204, 0, 187, 0.25) 0%, rgba(201, 32, 184, 0) 50%), linear-gradient(141.27deg, rgba(0, 70, 209, 0) 50%, rgba(0, 70, 209, 0.25) 100%)"></div></div>
+			<div style="width:100%; height:100%; position:fixed; z-index:-9999999999; background-color:#0b0d13;">
+				<div style="
+			position: absolute;
+			bottom: 0;
+			right: -10%;
+			top: -10%;
+			height: 500px;
+			width: 500px;
+			border-radius: 50%;
+			background: radial-gradient(
+			  circle farthest-side,
+			  rgba(0, 200, 255, 0.15),
+			  rgba(255, 255, 255, 0)
+			);"></div>
+			<div style="position: absolute;
+			bottom: 0%;
+			left: -10%;
+			height: 500px;
+			width: 500px;
+			border-radius: 50%;
+			background: radial-gradient(
+			  circle farthest-side,
+			  rgba(0, 255, 242, 0.15),
+			  rgba(255, 255, 255, 0)
+			  );"></div>
+			</div>
 		</div>
 		<slot />
 	</body>
