add easter egg to dark mode in emerald color favicon

--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,48 +1,7 @@
-<div class="fixed h-full w-full">
+<div style="position:fixed; top:0px; left:0px; height:100%; width:100%;">
 
-    <div  style="background-image: linear-gradient(140deg, rgb(255, 100, 50) 12.8%, rgb(255, 0, 101) 43.52%, rgb(123, 46, 255) 84.34%);"></div>
-    <div class="absolute h-full w-full" style="background-image: linear-gradient(140deg, rgb(244, 229, 240), rgb(229, 54, 171), rgb(92, 3, 188), rgb(14, 7, 37)); opacity: 1;">
-    </div>
-    <div class="absolute h-full w-full" style="background-image: linear-gradient(135deg, rgb(238, 221, 243), rgb(238, 146, 177), rgb(99, 48, 180)); opacity: 1;"></div>
 
-    <div class="absolute h-full w-full"
-    style="background-image: linear-gradient(113.96deg, rgb(69, 190, 232) 13.54%, rgb(214, 161, 172) 50%, rgb(232, 140, 93) 85.42%); opacity: 1;"></div>
-
-    <div class="absolute h-full w-full"
-    style="background-image: linear-gradient(113.96deg, rgb(69, 233, 159) 11.98%, rgb(213, 168, 155) 50%, rgb(232, 70, 152) 85.42%); opacity: 1;"></div>
-
-    <div class="absolute h-full w-full"
-    style="background-image: linear-gradient(113.96deg, rgb(69, 223, 232) 11.98%, rgb(211, 170, 175) 50%, rgb(232, 103, 100) 85.42%); opacity: 1;"></div>
-
-    <div class="absolute h-full w-full"
-    style="background-image: linear-gradient(293.96deg, rgb(160, 233, 125) 11.46%, rgb(169, 203, 177) 50%, rgb(192, 128, 232) 88.54%); opacity: 1;"></div>
-
-    <div class="absolute h-full w-full"
-    style="background-image: linear-gradient(-45deg, rgb(114, 122, 154), rgb(216, 219, 233)); opacity: 1;"></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
-
-    <div class="absolute h-full w-full"
-    style=""></div>
+    
 </div>
 
 <main 
