fix to green color bundle to tailwind

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,4 +65,8 @@ const { title } = Astro.props;
 	body {
 		font-family: "Outfit Variable", sans-serif;
 	}
+		.bg-green-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
 </style>
