--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,3 +1,3 @@
-<h1 class="bg-gradient-to-r from-violet-600 via-[#17b890] to-purple-400 inline-block text-transparent bg-clip-text text-balance text-6xl sm:text-8xl p-3 font-semibold">
+<h1 class="bg-gradient-to-r from-violet-600 via-[#17b890] to-purple-400 inline-block text-transparent bg-clip-text text-balance text-6xl sm:text-8xl  pb-2 font-semibold">
     <slot/><span class="text-3xl sm:text-5xl">.com</span>
 </h1>
