fix description to google index SEO

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Gradients, colors, styles all in one place, you just have to choose the one you like the most, copy and paste it. Enjoy many backgrounds for your projects, pages, and anything you want all in Backgy." />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="title" content="Backgy - Backgrounds made for your website using Tailwind and CSS just copy and paste ready to use" />
