add canonical to fix google issues

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en">
 	<head>
+<link rel="canonical" href="https://backgy.com/" />
 		<meta charset="UTF-8" />
 		<meta name="description" content="Gradients, colors, styles all in one place, you just have to choose the one you like the most, copy and paste it. Enjoy many backgrounds for your projects, pages, and anything you want all in Backgy." />
 		<meta name="viewport" content="width=device-width" />
